--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     tools:context=".Form">
 
+
+    <!--
+        TextView
+        ImageView
+        ImageButton
+        Icon
+     -->
+
     <!--Title -->
     <TextView
         android:layout_width="wrap_content"
@@ -102,11 +110,31 @@
             app:cornerRadius="24dp"
             android:textColor="@color/white"
             tools:ignore="Suspicious0dp" />
-
-
-
-
     </LinearLayout>
+
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/this_is_a_image_of_a_person"
+        android:src="@drawable/download"
+        android:layout_gravity="center"
+        />
+
+
+    <ImageButton
+        android:id="@+id/imageBtn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/this_is_a_image_of_a_person"
+        android:src="@drawable/download"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"
+        />
+
+
+
+
 
 
 
